--- a/css/styles.css
+++ b/css/styles.css
@@ -170,8 +170,8 @@ img {
 }
 
 /**  Main **/
-/** Section-dark **/
-.section-dark {
+/** Section-order **/
+.section-order {
     background-color: #2E2F42;
     padding: 188px 0;
     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
@@ -182,7 +182,7 @@ img {
     margin: 0 auto;
 }
 
-.section-dark-title {
+.section-order-title {
     color: #FFF;
     text-align: center;
     font-size: 56px;
@@ -532,3 +532,104 @@ img {
 .footer-social-link:focus {
     background-color: #31D0AA;
 }
+
+.footer-container-social {
+    margin-right: 80px;
+}
+
+.subscribe-title {
+    margin-bottom: 16px;
+    color: #FFF;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.32px;
+}
+
+.subscribe-form {
+    display: flex;
+    gap: 24px;
+}
+
+.subscribe-input {
+    width: 264px;
+    height: 40px;
+    border-radius: 4px;
+    border: 1px solid #FFF;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    padding-left: 16px;
+    background-color: #2E2F42;
+}
+
+.subscribe-input::placeholder {
+    color: #FFF;
+    font-family: Roboto;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 2;
+    letter-spacing: 0.48px;
+
+}
+
+.subscribe-btn {
+    display: flex;
+    padding: 8px 24px;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+    border-radius: 4px;
+    background-color: #4D5AE5;
+    cursor: pointer;
+    border: none;
+    color: #FFF;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.64px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.subscribe-btn:hover,
+.subscribe-btn:focus {
+    background-color: #404BBF;
+}
+
+.subscribe-icon {
+    fill: #FFFFFF;
+}
+
+/* Modal window */
+.modal {}
+
+.modal-close {}
+
+.modal-close-icon {}
+
+.modal-form-title {}
+
+.modal-form {}
+
+.modal-form-group {}
+
+.modal-form-label {}
+
+.modal-form-input {}
+
+.modal-form-input-icon {}
+
+.modal-form-group-textarea {}
+
+.modal-form-textarea {}
+
+.modal-form-checkbox {}
+
+.modal-form-checkbox-input {}
+
+.modal-form-policy {}
+
+.modal-form-policy-priv {}
+
+.modal-form-policy-priv-link {}
+
+.form-btn {}
