--- a/css/styles.css
+++ b/css/styles.css
@@ -221,7 +221,6 @@ img {
 }
 
 .button-order:hover,
-.button-order:active,
 .button-order:focus {
     color: #FFFFFF;
     background-color: #404BBF;
@@ -600,36 +599,195 @@ img {
 }
 
 /* Modal window */
-.modal {}
 
-.modal-close {}
+.backdrop {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    background-color: #2e2f4266;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
-.modal-close-icon {}
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 408px;
+    min-height: 584px;
+    box-shadow: 0px 1px 1px 0px #00000024, 0px 1px 3px 0px #0000001f,
+        0px 1px 2px 0px #00000033;
+    border-radius: 4px;
+    background-color: #fcfcfc;
+    transform: translate(-50%, -50%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    padding: 72px 24px 24px 24px;
+}
 
-.modal-form-title {}
+.modal-close {
+    display: flex;
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    width: 24px;
+    height: 24px;
+    padding: 0;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    background-color: #e7e9fc;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
-.modal-form {}
+.modal-close:hover,
+.modal-close:focus {
+    background-color: #404bbf;
+    border: none;
+}
 
-.modal-form-group {}
+.modal-close:hover .modal-close-icon,
+.modal-close:focus .modal-close-icon {
+    fill: #ffffff;
+}
 
-.modal-form-label {}
+.modal-form-title {
+    color: #2E2F42;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.32px;
+    margin-bottom: 16px;
+}
 
-.modal-form-input {}
+.modal-form-group {
+    margin-bottom: 8px;
+}
 
-.modal-form-input-icon {}
+.modal-form-label {
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+    display: block;
+    margin-bottom: 4px;
+}
 
-.modal-form-group-textarea {}
+.modal-input {
+    border: 1px solid #2e2f4266;
+    border-radius: 4px;
+    width: 100%;
+    height: 40px;
+    background-color: transparent;
+    padding-left: 38px;
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
-.modal-form-textarea {}
+.modal-input:focus {
+    border-color: #4D5AE5;
+}
 
-.modal-form-checkbox {}
+.modal-form-input-icon {
+    position: absolute;
+    top: 50%;
+    left: 16px;
+    transform: translateY(-50%);
+    transform: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-container-input {
+    position: relative;
+}
+
+.modal-container-input:focus-within .modal-form-input-icon {
+    fill: #4D5AE5;
+}
+
+.modal-form-group-textarea {
+    margin-bottom: 16px;
+}
+
+.modal-form-textarea {
+    width: 100%;
+    height: 120px;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.48px;
+    border-radius: 4px;
+    border: 1px solid #2e2f4266;
+    background-color: transparent;
+    padding: 8px 16px;
+    resize: none;
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-textarea:focus {
+    border-color: #4D5AE5;
+}
+
+.modal-form-checkbox {
+    margin-bottom: 24px;
+}
 
 .modal-form-checkbox-input {}
 
-.modal-form-policy {}
+.modal-form-policy {
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.48px;
+    color: #8e8f99;
+}
 
-.modal-form-policy-priv {}
+.modal-form-policy-priv {
+    width: 16px;
+    height: 16px;
+    border: 1px solid #2e2f4266;
+    border-radius: 2px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    fill: transparent;
+    margin-right: 8px;
+}
 
-.modal-form-policy-priv-link {}
+.modal-form-checkbox-input:checked .modal-form-policy-priv {
+    background-color: #404bbf;
+    border: none;
+    fill: #f4f4fd;
+}
 
-.form-btn {}
+.modal-form-policy-priv-link {
+    color: #4d5ae5;
+    text-decoration: underline;
+}
+
+.form-btn {
+    font-weight: 500;
+    font-size: 16px;
+    background-color: #4d5ae5;
+    color: #ffffff;
+    letter-spacing: 0.04em;
+    line-height: 1.5;
+    cursor: pointer;
+    display: block;
+    margin: 0 auto;
+    min-width: 169px;
+    height: 56px;
+    font-family: "Roboto", sans-serif;
+    border: none;
+    border-radius: 4px;
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    box-shadow: 0px 4px 4px 0px #00000026;
+}
