--- a/css/styles.css
+++ b/css/styles.css
@@ -557,11 +557,16 @@ img {
     border: 1px solid #FFF;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
     padding-left: 16px;
-    background-color: #2E2F42;
+    background-color: transparent;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    color: #ffffff;
+
 }
 
 .subscribe-input::placeholder {
-    color: #FFF;
+    color: #ffffff;
     font-family: Roboto;
     font-size: 12px;
     font-weight: 400;
@@ -572,6 +577,7 @@ img {
 
 .subscribe-btn {
     display: flex;
+    min-width: 165px;
     padding: 8px 24px;
     justify-content: center;
     align-items: center;
@@ -595,6 +601,7 @@ img {
 }
 
 .subscribe-icon {
+    margin-left: 16px;
     fill: #FFFFFF;
 }
 
@@ -655,6 +662,10 @@ img {
     fill: #ffffff;
 }
 
+.modal-close-icon {
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .modal-form-title {
     color: #2E2F42;
     text-align: center;
@@ -698,7 +709,7 @@ img {
     top: 50%;
     left: 16px;
     transform: translateY(-50%);
-    transform: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-container-input {
@@ -722,6 +733,7 @@ img {
     border-radius: 4px;
     border: 1px solid #2e2f4266;
     background-color: transparent;
+    color: rgba(46, 47, 66, 0.4);
     padding: 8px 16px;
     resize: none;
     outline: transparent;
@@ -735,8 +747,6 @@ img {
 .modal-form-checkbox {
     margin-bottom: 24px;
 }
-
-.modal-form-checkbox-input {}
 
 .modal-form-policy {
     font-size: 12px;
@@ -760,7 +770,8 @@ img {
     margin-right: 8px;
 }
 
-.modal-form-checkbox-input:checked .modal-form-policy-priv {
+.modal-form-checkbox-input:checked+.modal-form-policy-priv,
+.modal-form-policy {
     background-color: #404bbf;
     border: none;
     fill: #f4f4fd;
