--- a/css/styles.css
+++ b/css/styles.css
@@ -770,8 +770,7 @@ img {
     margin-right: 8px;
 }
 
-.modal-form-checkbox-input:checked+.modal-form-policy-priv,
-.modal-form-policy {
+.modal-form-checkbox-input:checked+.modal-form-policy-priv {
     background-color: #404bbf;
     border: none;
     fill: #f4f4fd;
