--- a/css/styles.css
+++ b/css/styles.css
@@ -801,3 +801,5 @@ img {
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     box-shadow: 0px 4px 4px 0px #00000026;
 }
+
+/* Modal window */
