--- a/css/styles.css
+++ b/css/styles.css
@@ -560,6 +560,7 @@ img {
     background-color: transparent;
     line-height: 1.5;
     letter-spacing: 0.04em;
+    font-size: 12px;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     color: #ffffff;
 
@@ -770,7 +771,7 @@ img {
     margin-right: 8px;
 }
 
-.modal-form-checkbox-input:checked+.modal-form-policy-priv {
+.modal-form-checkbox-input:checked+.modal-form-policy {
     background-color: #404bbf;
     border: none;
     fill: #f4f4fd;
