--- a/css/styles.css
+++ b/css/styles.css
@@ -771,7 +771,7 @@ img {
     margin-right: 8px;
 }
 
-.modal-form-checkbox-input:checked+label {
+input[type="checkbox"]:checked+label {
     background-color: #404bbf;
     border: none;
     fill: #f4f4fd;
