--- a/css/styles.css
+++ b/css/styles.css
@@ -774,6 +774,8 @@ img {
     justify-content: center;
     align-items: center;
     fill: transparent;
+    padding: 0%;
+
     margin-right: 8px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         border 250ms cubic-bezier(0.4, 0, 0.2, 1),
@@ -785,6 +787,8 @@ input[type="checkbox"]:checked+label>span {
     border: none;
     fill: #f4f4fd;
 }
+
+.checkbox-icon {}
 
 .modal-form-policy-priv-link {
     color: #4d5ae5;
