--- a/css/styles.css
+++ b/css/styles.css
@@ -672,6 +672,7 @@ img {
 }
 
 .modal-close-icon {
+    fill: #2e2f42;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -774,21 +775,17 @@ img {
     justify-content: center;
     align-items: center;
     fill: transparent;
-    padding: 0%;
-
     margin-right: 8px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         border 250ms cubic-bezier(0.4, 0, 0.2, 1),
         fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-input[type="checkbox"]:checked+label>span {
+.modal-form-checkbox-input:checked+.modal-form-policy .modal-form-policy-priv {
     background-color: #404bbf;
     border: none;
     fill: #f4f4fd;
 }
-
-.checkbox-icon {}
 
 .modal-form-policy-priv-link {
     color: #4d5ae5;
@@ -814,4 +811,10 @@ input[type="checkbox"]:checked+label>span {
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     box-shadow: 0px 4px 4px 0px #00000026;
+}
+
+.form-btn:hover,
+.form-btn:focus {
+    color: #FFFFFF;
+    background-color: #404BBF;
 }
