--- a/css/styles.css
+++ b/css/styles.css
@@ -582,7 +582,6 @@ img {
     padding: 8px 24px;
     justify-content: center;
     align-items: center;
-    gap: 16px;
     border-radius: 4px;
     background-color: #4D5AE5;
     cursor: pointer;
@@ -603,6 +602,7 @@ img {
 
 .subscribe-icon {
     fill: #FFFFFF;
+    margin-left: 16px;
 }
 
 /* Modal window */
